--- a/PlantUMLEditor/PlantUMLEditor.csproj
+++ b/PlantUMLEditor/PlantUMLEditor.csproj
@@ -54,7 +54,6 @@
     <Compile Include="Debouncer.cs" />
     <Compile Include="Editor\PlantUMLLanguage.cs" />
     <Compile Include="Editor\PlantUMLViewer.cs" />
-    <Compile Include="MarkdownHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlantUMLEditor_Package.cs" />
     <Compile Include="source.extension.cs">
@@ -91,6 +90,9 @@
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.507" ExcludeAssets="Runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Markdig">
+      <Version>0.33.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.7.2196" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Web.WebView2">
