--- a/PlantUMLEditor.Tests/packages.config
+++ b/PlantUMLEditor.Tests/packages.config
@@ -1,20 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
-  <package id="Markdig" version="0.33.0" targetFramework="net481" />
-  <package id="MSTest.TestAdapter" version="2.2.10" targetFramework="net481" />
-  <package id="MSTest.TestFramework" version="2.2.10" targetFramework="net481" />
+  <package id="Markdig" version="0.39.1" targetFramework="net481" />
+  <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net481" />
+  <package id="Microsoft.Testing.Extensions.Telemetry" version="1.5.0" targetFramework="net481" />
+  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.5.0" targetFramework="net481" />
+  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.5.0" targetFramework="net481" />
+  <package id="Microsoft.Testing.Platform" version="1.5.0" targetFramework="net481" />
+  <package id="Microsoft.Testing.Platform.MSBuild" version="1.5.0" targetFramework="net481" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="17.12.0" targetFramework="net481" />
+  <package id="MSTest.Analyzers" version="3.7.0" targetFramework="net481" developmentDependency="true" />
+  <package id="MSTest.TestAdapter" version="3.7.0" targetFramework="net481" />
+  <package id="MSTest.TestFramework" version="3.7.0" targetFramework="net481" />
   <package id="PlantUml.Net" version="1.4.80" targetFramework="net481" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net481" />
+  <package id="System.Collections.Immutable" version="9.0.0" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.0" targetFramework="net481" />
   <package id="System.IO" version="4.3.0" targetFramework="net481" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net481" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net481" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net481" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net481" />
+  <package id="System.Reflection.Metadata" version="9.0.0" targetFramework="net481" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net481" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net481" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net481" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net481" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net481" />
 </packages>
