--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v4.2.0
       with:
-        dotnet-version: '4.8.x'
+        dotnet-version: '4.8'
 
     - name: Install NuGet
       run: nuget restore
