--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -18,6 +18,10 @@ jobs:
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4.2.0
+      with:
+        dotnet-version: | 
+          3.1.x
+          5.0.x
 
     - name: Install NuGet
       run: nuget restore
