--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -16,12 +16,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4.2.0
-      with:
-        dotnet-version: | 
-          3.1.x
-          5.0.x
+    - name: setup-msbuild
+      uses: microsoft/setup-msbuild@v2    
 
     - name: Install NuGet
       run: nuget restore
