--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -23,32 +23,6 @@ jobs:
       run: nuget restore
 
     - name: Build solution
-      run: msbuild /t:Restore,Build /p:Configuration=Release
+      run: msbuild /t:Restore,Build,Deploy /p:Configuration=Release
 
-    - name: Package VSIX
-      run: msbuild /t:Pack /p:Configuration=Release /p:DeployExtension=false
-
-    - name: Upload VSIX artifact
-      uses: actions/upload-artifact@v4.5.0
-      with:
-        name: vsix
-        path: |
-          **/*.vsix
-
-  deploy:
-    needs: build
-    runs-on: windows-latest
-    steps:
-    - name: Download VSIX artifact
-      uses: actions/download-artifact@v4.1.8
-      with:
-        name: vsix
-        path: vsix
-
-    - name: Deploy to Visual Studio Marketplace
-      env:
-        VSS_EXTENSION_ID: ${{ secrets.VSS_EXTENSION_ID }}
-        VSS_PUBLISHER_ID: ${{ secrets.VSS_PUBLISHER_ID }}
-        VSS_ACCESS_TOKEN: ${{ secrets.VSS_ACCESS_TOKEN }}
-      run: |
-        vsce publish --packagePath vsix/*.vsix --pat $VSS_ACCESS_TOKEN
+   
