Add VSIX artifact upload to build-vsix.yml
Updated build-vsix.yml to include a new step for uploading the VSIX artifact using the actions/upload-artifact@v4.5.0 action. The msbuild command has been modified to remove the Deploy target, now only including the Restore and Build targets. The path parameter for the upload action is set to include all files with the .vsix extension.

--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -23,6 +23,11 @@ jobs:
       run: nuget restore
 
     - name: Build solution
-      run: msbuild /t:Restore,Build,Deploy /p:Configuration=Release
+      run: msbuild /t:Restore,Build /p:Configuration=Release
 
-   
+    - name: Upload VSIX artifact
+      uses: actions/upload-artifact@v4.5.0
+      with:
+        name: vsix
+        path: |
+          **/*.vsix
