Add deployment stage to build-vsix.yml workflow
Introduced a new deployment stage in the `build-vsix.yml` workflow.
Modified the `Upload VSIX artifact` step to ensure correct upload.
Added a `deploy` job that depends on the `build` job and runs on `windows-latest`.
The `deploy` job includes steps to download the VSIX artifact and deploy it to the Visual Studio Marketplace.
Set environment variables for deployment using secrets: `VSS_EXTENSION_ID`, `VSS_PUBLISHER_ID`, and `VSS_ACCESS_TOKEN`.
Deployment executed using `vsce publish` with the specified package path and access token.

--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -31,3 +31,22 @@ jobs:
         name: vsix
         path: |
           **/*.vsix
+
+  deploy:
+     needs: build
+     runs-on: windows-latest
+
+     steps:
+     - name: Download VSIX artifact
+       uses: actions/download-artifact@v4.1.8
+       with:
+         name: vsix
+         path: vsix
+
+     - name: Deploy to Visual Studio Marketplace
+       env:
+         VSS_EXTENSION_ID: ${{ secrets.VSS_EXTENSION_ID }}
+         VSS_PUBLISHER_ID: ${{ secrets.VSS_PUBLISHER_ID }}
+         VSS_ACCESS_TOKEN: ${{ secrets.VSS_ACCESS_TOKEN }}
+       run: |
+         vsce publish --packagePath vsix/*.vsix --pat $VSS_ACCESS_TOKEN
